avfilter/avf_showcqt: set range on fps/rate/r option

see Ticket #5618

Signed-off-by: Muhammad Faiz <mfcc64@gmail.com>